Fixed Blog Post

--- a/src/content/blog/Blog Post 1.mdx
+++ b/src/content/blog/Blog Post 1.mdx
@@ -4,6 +4,11 @@ description: 'hello'
 pubDate: 'Jan 12 2025'
 heroImage: '../../assets/images/banner.jpg'
 category: 'Category 1'
+tags:
+  - JavaScript
+  - css
+  - HTML5
+  - GitHub
 draft: false
 ---
 
