--- a/src/content/blog/Blog Post 1.mdx
+++ b/src/content/blog/Blog Post 1.mdx
@@ -2,7 +2,7 @@
 title: Blog Post 1
 description: 'hello'
 pubDate: 'Jan 12 2025'
-heroImage: '../../assets/images/banner.jpg'
+heroImage: '../../assets/images/pumpkin.jpeg'
 category: 'Category 1'
 tags:
   - JavaScript
