--- a/src/content/blog/1. hello world.mdx
+++ b/src/content/blog/1. hello world.mdx
@@ -14,7 +14,7 @@ draft: false
 
 **This is my first blog post.**
 
-I like potatoes.
+my sweet pumpkin helped me set up this website.
 
 ## Versatility
 
