--- a/src/content/blog/1. hello world.mdx
+++ b/src/content/blog/1. hello world.mdx
@@ -1,21 +1,62 @@
 ---
 title: 1. hello world
-description: 'blog post 1'
-pubDate: 'Jan 12 2025'
-heroImage: '../../assets/images/pumpkin.jpeg'
-category: 'Category 1'
+description: 'blog post #1'
+pubDate: 'Jan 14 2025'
+heroImage: '../../assets/images/LA Sunset-min.jpg'
+category: 'Digital Diary'
 tags:
-  - JavaScript
-  - css
-  - HTML5
-  - GitHub
+  - Reflections
 draft: false
 ---
 
-**This is my first blog post.**
+**Hello World,**
 
-my sweet pumpkin helped me set up this website.
+Time has flown by – it's already the fourteenth day of 2025. That's 3.84% of the year, which is honestly quite a lot considering
+all I've done so far is simply think about everything I'd like to get done this year. I've spent quite a lot of time (frankly too much time) trying
+to start a blog in order to better document my life & organize my thoughts. After looking into various platforms, my boyfriend told me that I could try use github. 
+Unfortunately, coding is a foreign concept to me & after looking through the tutorials I was still completely lost. Feeling defeated, I let my pride go & asked him for help.
+I am happy to say that after a few hours of diligent work, he has now got this blog up and running!
 
-## Versatility
+## How I started my year
 
-The potato is versatile.
+I caught a bug on New Year's Eve and inevitably I searched on Google: "Is it bad luck to get sick on New Year's Eve?"
+Suprisingly the internet was full of relieving thoughts, but I felt silly for searching it up in the first place.
+
+Outside of what's uncontrollable, I'm generally in charge of my life. So, as one does at the beginning of each year, I've made some 
+goals for myself this year that I'd like to achieve. I'm still trying to condense this list, but I think I have the general gist (updates in the near future to come).
+
+By the morning of the new year, I was back to my usual self. My mother set up a beautiful traditional breakfast for New Year's Day. The food was carefully plated with each dish symbolizing its own positive message.
+Michael drove his 15ft U-Haul down from the city & joined us for breakfast. Afterwards, he took a nap on the massage chair while Gina and I went on a boba run to Tastea (my brother was also taking a nap). 
+
+## The drive to LA
+
+At around 4pm, we were ready to embark on our journey to LA. Having dreamed of becoming a truck driver in my childhood, I was thrilled to finally get behind the wheel.
+We were off to a bumpy start as the door flew open on its own while we were on the highway. As cars beeped at us and made hand signals that seemed to resemble a thumbs up, Michael, an optimist, had concluded
+that the cars were telling us we were doing a good job. After a few honks, we concluded that the cars were trying to communicate something else to us. We pulled over to the side of the highway and noticed the trunk was wide
+open. Luckily nothing fell out, but it was a close call.
+
+The rest of the 7 hour drive went smoothly. The gas tank only needed to be filled up once which was pretty surprising considering how heavy the truck was. For dinner, we opted for In n Out, a classic. By 11pm,
+we were in LA! 11/10 experience. Also, remember the boba I mentioned earlier? It lasted me the whole ride & more!
+
+## In LA
+
+As Michael was getting settled in his new apartment and office, I was working remotely for a few days. I was grateful for the natural light his room gets as my room in the city gets minimal light. 
+
+We went on a lot of cute dates over the course of a few days:
+1- Kazunori for dinner followed by a walk at Venice Beach while we ate our customized Coldstone ice cream (oreo sweet cream + kit kats, twix, & cookie dough). Michael says that our order deserves to be added to their official menu.
+2- Sunset run at Manhattan Beach. About a mile in, we accidentally got our shoes wet so we went on a barefoot run on the sand. 
+3- Bento from Tokyo Central while watching Squid Games. We finished all of season 2 over the course of 3 days.
+4- Pastries from Cream Pan at the park! We tried the strawberry cream pastry, yakisoba pan, chicken urry pan, and iced matcha. The curry pan and iced matcha was our favorite.
+
+The year started off on a wonderful note, and despite the sadness of going back home, I felt very loved and content.
+
+
+## Back Home
+
+I don't have too much to report on here. As usual, my apartment searching obsession has continued. I even got catfished by a $700 ADU that looked nothing like the photo. The second I stepped in,
+I felt a shiver down my spine and toes. The ADU unit was designed like a speakeasy, hidden behind the door of a plastic outdoor storage box. This was a wake up call for me to momentarily stop the search. I had 
+spent an hour an a half round trip via the bus just to get catfished. 
+
+My search for an apartment unit continues due to habit, but I'm honestly pretty happy with my current situation. More to come!
+
+<img src="../../assets/images/pumpkin.jpeg" alt="Descriptive text for accessibility">
