Blog Post 1 Fix
Added Category 1 "Digital DIary"

--- a/src/content/blog/hello-world.mdx
+++ b/src/content/blog/hello-world.mdx
@@ -59,4 +59,4 @@ spent an hour an a half round trip via the bus just to get catfished.
 
 My search for an apartment unit continues due to habit, but I'm honestly pretty happy with my current situation. More to come!
 
-<img src="../../assets/images/pumpkin.jpeg" alt="Descriptive text for accessibility">
+<img src="../../assets/images/pumpkin.jpeg" alt="Descriptive text for accessibility" />
