Fixed photo ratio and headers

--- a/src/content/blog/hello-world.mdx
+++ b/src/content/blog/hello-world.mdx
@@ -2,14 +2,14 @@
 title: 1. hello world
 description: 'blog post #1'
 pubDate: 'Jan 14 2025'
-heroImage: '../../assets/images/LA Sunset-min.jpg'
+heroImage: '../../assets/images/LA Sunset-min.png'
 category: 'Digital Diary'
 tags:
   - Reflections
 draft: false
 ---
 
-**Hello World,**
+## Hello World
 
 Time has flown by – it's already the fourteenth day of 2025. That's 3.84% of the year, which is honestly quite a lot considering
 all I've done so far is simply think about everything I'd like to get done this year. I've spent quite a lot of time (frankly too much time) trying
@@ -17,7 +17,7 @@ to start a blog in order to better document my life & organize my thoughts. Afte
 Unfortunately, coding is a foreign concept to me & after looking through the tutorials I was still completely lost. Feeling defeated, I let my pride go & asked him for help.
 I am happy to say that after a few hours of diligent work, he has now got this blog up and running!
 
-## How I started my year
+**How I started my year**
 
 I caught a bug on New Year's Eve and inevitably I searched on Google: "Is it bad luck to get sick on New Year's Eve?"
 Suprisingly the internet was full of relieving thoughts, but I felt silly for searching it up in the first place.
@@ -28,7 +28,7 @@ goals for myself this year that I'd like to achieve. I'm still trying to condens
 By the morning of the new year, I was back to my usual self. My mother set up a beautiful traditional breakfast for New Year's Day. The food was carefully plated with each dish symbolizing its own positive message.
 Michael drove his 15ft U-Haul down from the city & joined us for breakfast. Afterwards, he took a nap on the massage chair while Gina and I went on a boba run to Tastea (my brother was also taking a nap). 
 
-## The drive to LA
+**The drive to LA**
 
 At around 4pm, we were ready to embark on our journey to LA. Having dreamed of becoming a truck driver in my childhood, I was thrilled to finally get behind the wheel.
 We were off to a bumpy start as the door flew open on its own while we were on the highway. As cars beeped at us and made hand signals that seemed to resemble a thumbs up, Michael, an optimist, had concluded
@@ -38,7 +38,7 @@ open. Luckily nothing fell out, but it was a close call.
 The rest of the 7 hour drive went smoothly. The gas tank only needed to be filled up once which was pretty surprising considering how heavy the truck was. For dinner, we opted for In n Out, a classic. By 11pm,
 we were in LA! 11/10 experience. Also, remember the boba I mentioned earlier? It lasted me the whole ride & more!
 
-## In LA
+**In LA**
 
 As Michael was getting settled in his new apartment and office, I was working remotely for a few days. I was grateful for the natural light his room gets as my room in the city gets minimal light. 
 
@@ -51,7 +51,7 @@ We went on a lot of cute dates over the course of a few days:
 The year started off on a wonderful note, and despite the sadness of going back home, I felt very loved and content.
 
 
-## Back Home
+**Back Home**
 
 I don't have too much to report on here. As usual, my apartment searching obsession has continued. I even got catfished by a $700 ADU that looked nothing like the photo. The second I stepped in,
 I felt a shiver down my spine and toes. The ADU unit was designed like a speakeasy, hidden behind the door of a plastic outdoor storage box. This was a wake up call for me to momentarily stop the search. I had 
@@ -59,4 +59,3 @@ spent an hour an a half round trip via the bus just to get catfished.
 
 My search for an apartment unit continues due to habit, but I'm honestly pretty happy with my current situation. More to come!
 
-<img src="../../assets/images/pumpkin.jpeg" alt="Descriptive text for accessibility" />
