Removed Twitter and Linkedin Icon

--- a/src/content/blog/hello-world.mdx
+++ b/src/content/blog/hello-world.mdx
@@ -31,7 +31,7 @@ Michael drove his 15ft U-Haul down from the city & joined us for breakfast. Afte
 **The drive to LA**
 
 At around 4pm, we were ready to embark on our journey to LA. Having dreamed of becoming a truck driver in my childhood, I was thrilled to finally get behind the wheel.
-We were off to a bumpy start as the door flew open on its own while we were on the highway. As cars beeped at us and made hand signals that seemed to resemble a thumbs up, Michael, an optimist, had concluded
+We were off to a bumpy start as the door flew open on its own while we were on the highway. As cars beeped at us and made hand signals that seemed to resemble a thumbs up, Michael, an optimist, had hypothesized
 that the cars were telling us we were doing a good job. After a few honks, we concluded that the cars were trying to communicate something else to us. We pulled over to the side of the highway and noticed the trunk was wide
 open. Luckily nothing fell out, but it was a close call.
 
@@ -46,7 +46,7 @@ We went on a lot of cute dates over the course of a few days:
 1- Kazunori for dinner followed by a walk at Venice Beach while we ate our customized Coldstone ice cream (oreo sweet cream + kit kats, twix, & cookie dough). Michael says that our order deserves to be added to their official menu.
 2- Sunset run at Manhattan Beach. About a mile in, we accidentally got our shoes wet so we went on a barefoot run on the sand. 
 3- Bento from Tokyo Central while watching Squid Games. We finished all of season 2 over the course of 3 days.
-4- Pastries from Cream Pan at the park! We tried the strawberry cream pastry, yakisoba pan, chicken urry pan, and iced matcha. The curry pan and iced matcha was our favorite.
+4- Pastries from Cream Pan at the park! We tried the strawberry cream pastry, yakisoba pan, chicken curry pan, and iced matcha. The curry pan and iced matcha was our favorite.
 
 The year started off on a wonderful note, and despite the sadness of going back home, I felt very loved and content.
 
