--- a/src/content/blog/hello-world.mdx
+++ b/src/content/blog/hello-world.mdx
@@ -28,6 +28,7 @@ goals for myself this year that I'd like to achieve. I'm still trying to condens
 By the morning of the new year, I was back to my usual self. My mother set up a beautiful traditional breakfast for New Year's Day. The food was carefully plated with each dish symbolizing its own positive message.
 Michael drove his 15ft U-Haul down from the city & joined us for breakfast. Afterwards, he took a nap on the massage chair while Gina and I went on a boba run to Tastea (my brother was also taking a nap). 
 
+![Breakfast](https://i.imgur.com/7q8V3j3.jpeg)
 
 **The drive to LA**
 
@@ -51,6 +52,8 @@ We went on a lot of cute dates over the course of a few days:
 
 The year started off on a wonderful note, and despite the sadness of going back home, I felt very loved and content.
 
+![Sunset](https://i.imgur.com/X4CKunP.jpeg)
+
 **Back Home**
 
 I don't have too much to report on here. As usual, my apartment searching obsession has continued. I even got catfished by a $700 ADU that looked nothing like the photo. The second I stepped in,
@@ -59,4 +62,8 @@ spent an hour an a half round trip via the bus just to get catfished.
 
 My search for an apartment unit continues due to habit, but I'm honestly pretty happy with my current situation. More to come!
 
+See below for the photo I saw online: 
+![Expectation](https://i.imgur.com/1bYbw0p.jpeg)
 
+What the apartment actually looked like: 
+![Reality](https://i.imgur.com/GipFjse.jpeg)
