--- a/src/content/blog/our-wonderful-date.mdx
+++ b/src/content/blog/our-wonderful-date.mdx
@@ -11,43 +11,31 @@ draft: false
 
 **The airport**
 
-Michael came to visit me last weekend for the first time since moving to LA. We had not seen each other for two weeks! 
-
-While waiting for him at the airport, I encountered a rude man. I was pulled over by the curb waiting at the gate when the driver backed into my car. When I stepped out to take a look at the front, he stuck his head out of his window and said, “Yo, calm down, I am three feet away from you”. I told him he had no reason to raise his voice at me and he started to fume even more. When mentioning that I felt my car shake, he raised his voice once again and said “It’s an airport, your car is supposed to shake”. The rude man then reversed his car (again) trapping me so I wouldn’t be able to get out.
-
-Little did he know, I was planning on waiting at that spot regardless so it did not matter. There were no airport personnel with whistles directing traffic, so I was able to sit there for 20 minutes. 
- 
+Michael visited last weekend for the first time since moving to LA—we hadn’t seen each other in two weeks!　　
+While waiting at the airport, a rude driver backed into my car. When I stepped out to check, he yelled, “Yo, calm down, I’m three feet away!” He kept raising his voice, insisting my car was supposed to shake at an airport. Then he reversed again, blocking me in—not realizing I planned to wait there anyway. With no airport staff directing traffic, I got to stay put for 20 minutes.
 
 **The Beach**
 
-After picking up Michael, we headed towards our first destination: Takahashi Market! We picked up a BAM and Egg Musubi (Bacon + Spam), Unagi Musubi, Tako Poke, Squid Chips, Tamago Boro (egg snack), and a can of Royal Milk tea.
-
-On our way to Half Moon Bay, we took a pit stop at a plant store and saw some cute and funny succulents. 
-
-Once arriving to the beach, we set up the picnic and ate our lunch. The BAM and egg musubi was delumptious (11/10). Michael and I were in agreement that it was the best musubi we’ve ever had. We also enjoyed the Unagi Musubi as it had a generous unagi to rice ratio. By the afternoon, the fog cleared up and we got to enjoy a beautiful day at the beach.
+After picking up Michael, we headed to Takahashi Market for BAM & Egg Musubi, Unagi Musubi, Tako Poke, squid chips, and Royal Milk Tea. On the way to Half Moon Bay, we stopped at a plant store to admire the quirky succulents.
+We set up a picnic at the beach and munched on the musubi—easily the best we’ve had (11/10). The fog cleared by the afternoon, giving us the perfect view.
 
 ![Lunch](https://i.imgur.com/B3HnQ1c.jpeg)
 
 
 **Sunset**
 
-The original plan was to go see the sunset by taking a hike to the top of the mountain. However, the fog rolled in by early evening and we could not see a thing! We sat at a nice bench facing the supposed view while eating a cookie that my Grandma baked. After “sunset”, we headed home to say hi to my doggos and met up with my parents. We grabbed dinner at a handroll bar and then were dropped off back at my apartment.
+We had planned to hike for sunset, but the fog blocked our view. Instead, we sat on a nice bench, ate my grandma’s cookies, and enjoyed the view of the plants (within a 3-foot vicinity). Later, we grabbed dinner at a handroll bar with my parents before heading home.
 
 ![Foggy Sunset](https://i.imgur.com/bOIvpRe.jpeg)
 
 
 **The next day**
 
-The next morning, Michael and I walked over to get brunch at Lapisara Eatery where we shared a crab scramble and fried chicken benedict. Originally we had planned to go to Swan Oyster Depot but the line was too long. 
+We started the morning with brunch at Lapisara Eatery, sharing a crab scramble and fried chicken benedict. Our original plan was Swan Oyster Depot, but the line was so long.
+Later, we visited Sweet Glory, an adorable café with a strange no-laptops-on-weekends rule. We tried a passionfruit refresher, matcha Jeju hallabong, and an out-of-this-world passionfruit crepe cake. Once in season, we will try the mango one. While Michael worked on his own tasks, I read a book and browsed Zillow. I found a studio with a stunning view and inquired about it.
+We then walked through Golden Gate Park, dancing to music from a random DJ. Before seeing Wicked at 6:30, Michael picked up San Tung to-go, and we quickly toured the apartment I had inquired about. The view was gorgeous but out of budget ($2,300/month). 
 
-After lunch, we headed to a cafe in the inner sunset called Sweet Glory. Although they had a strange rule that you couldn’t have your laptop open on the weekends, it was a cute cafe. During our stay, we tried the passionfruit refresher, matcha jeju hallabong, and passionfruit crepe cake. That passionfruit crepe cake out of this world. Next time we will try the mango crepe cake when it comes in season. 
-
-While at the cafe, Michael was getting some of his to-do tasks done while I read a book/scrolled on Zillow. I found a studio apartment with a gorgeous view and inquired. After the cafe, we took a walk through Golden Gate Park and busted out some moves to music a random DJ was playing.
-
-Michael ordered us some San Tung To-Go as we had tickets to see Wicked at 6:30. The apartment owner I contacted earlier said I could come see the unit at 6:15 so we quickly made a pit stop there before going to the Metreon. The apartment had a beautiful view but was out of my budget ($2300/month). 
-
-
-What a great weekend!
+What a wonderful weekend!
 
 ![crepe cake](https://i.imgur.com/Dl0P7Qy.jpeg)
 
