--- a/src/content/blog/20-hours-in-LA.mdx
+++ b/src/content/blog/20-hours-in-LA.mdx
@@ -17,11 +17,11 @@ Disclaimer: I strongly despise LAX due to the unnecessary amount of traffic ther
 
 Once landing, I had to take a 10 minute bus that went through the runway prior to leaving the arrivals gate. Due to the ridiculous traffic, I then took the Hilton shuttle just to get out of the airport. Luckily, a cute boy picked me so all was good.
 
-**5 bowls**
+**5 bowls of ramen**
 
 Michael had wanted to take me to a tofu soup joint but it was unfortunately closed by the time we got there. With limited options, we opted for a nearby restaurant that supposedly had a special Chashu ramen. To our surprise, the restaurant only serves FIVE bowls of that special ramen a day. 
 
-The ramen we chose was not bad, but the takoyaki was especially mid (doughy with minimal filling)
+The ramen we chose was not bad, but the takoyaki was especially mid (doughy with minimal filling).
 
 **Sunday**
 
