--- a/src/content/blog/twenty-hours-in-LA.mdx
+++ b/src/content/blog/twenty-hours-in-LA.mdx
@@ -1,5 +1,5 @@
 ---
-title: 4. 20 hours in LA
+title: 4. twenty hours in LA
 description: 'blog post #4'
 pubDate: 'Jan 31 2025'
 heroImage: '../../assets/images/bakery.jpeg'
@@ -13,7 +13,7 @@ draft: false
 
 I found a $49 round-trip ticket to LA that arrived Saturday night and departed the next evening. 
 
-Disclaimer: I strongly despise LAX due to the unnecessary amount of traffic there is. I have never experienced an airport like this before. 
+FYI: I strongly despise LAX due to the unnecessary amount of traffic there is. I have never experienced an airport like this before. 
 
 Once landing, I had to take a 10 minute bus that went through the runway prior to leaving the arrivals gate. Due to the ridiculous traffic, I then took the Hilton shuttle just to get out of the airport. Luckily, a cute boy picked me so all was good.
 
