--- a/src/content/blog/valentines.mdx
+++ b/src/content/blog/valentines.mdx
@@ -29,4 +29,4 @@ In the afternoon, we stopped by the mall to try warabi mochi from a place Michae
 On my last day, we played pickleball at the local park in the morning. Michael won both games (although I am ambidextrous, I am not very skilled), but it was still so much fun. Afterward, we grabbed coffee at a cafe in K-Town. The kinako latte, grapefruit refresher, and strawberry croffle were delumptious. For our dinner, we had Chinese skewers with a Korean fusion twist, complete with little banchan plates to start. Michael wanted to try the sweet and sour pork, so he asked the girl next to one for a piece. We traded for a slice of our seafood pancake.
 Before heading to the airport, we squeezed in one last stop at Baldwin Hills Scenic Overlook. The skyline was the perfect ending to such a wonderful weekend.
 
-![skewer]](https://i.imgur.com/91OJfwJ.jpeg)
+![skewer](https://i.imgur.com/91OJfwJ.jpeg)
